--- a/css/css.css
+++ b/css/css.css
@@ -20,3 +20,11 @@
   margin-bottom: 35px;
   float: center;
 }
+
+.blog-footer {
+    padding: 20px 0;
+    color: #999;
+    text-align: center;
+    background-color: #f9f9f9;
+    border-top: 1px solid #e5e5e5;
+}
